[SANTUARIO-207] - Fixed a bunch of findbugs warnings.
git-svn-id: https://svn.apache.org/repos/asf/santuario/xml-security-java/trunk@1097398 13f79535-47bb-0310-9956-ffa450edef68